# live-platform

./: .gitignore  Makefile  app.py  chat_rooms.py  data.py  deploy.sh  gunicorn.py  package-lock.json  package.json  pyproject.toml  urls.py  utils.py  video.py
fallback/livestream1/: index.html
fallback/livestream2/: index.html
fallback/livestream3/: index.html
peertube/: __init__.py  api.py
public/: index.html
public/libs/: video-js.min.css  video.min.js  videojs-contrib-quality-levels.min.js  videojs-hls-quality-selector.css  videojs-hls-quality-selector.min.js
public/tag-manager/: index.html
static/: main.js
static/tag-manager/: index.html
style/: _custom.scss  _variables.scss  main.scss
templates/: chat-home.html  home.html  index.html
