[tool.poetry]
name = "matomocamp-live"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.0"
python-dateutil = "^2.8.2"
Babel = "^2.9.1"
libsass = "^0.22.0"
gunicorn = "^21.2.0"
setproctitle = "^1.2.2"
requests = "^2.28.1"
pytz = "^2023.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
